k8s/yaml/kubia-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia
spec:
  sessionAffinity: ClientIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: kubia
